# robotics-projects

blob-tracker/: README  blob-tracker.py  blob_tracker.py  color_detector.py
iohannes/: README
iohannes/IOIOLib/: AndroidManifest.xml  README  build.xml  local.properties  project.properties
iohannes/fritzing/: generic_motor_driver.fzpz  iohannes.fzz
iohannes/iohannes/: .gitignore  AndroidManifest.xml  ant.properties  build.xml  local.properties
iohannes/iohannes-ros/: AndroidManifest.xml  build.xml  local.properties  project.properties
iohannes/iohannes_ros/: .gitignore  AndroidManifest.xml  README  ant.properties  mainpage.dox  manifest.xml  project.properties
nomad_camera_tracking/: README  mainpage.dox  manifest.xml
nomad_camera_tracking/launch/: nomad_camera_tracking.launch
nomad_camera_tracking/nodes/: PanTilt.py  SSC32.py  color-tracker.py  color_tracker.py  pan-tilt.py  pan_tilt.py  settings.py  static_transforms.py  tracker_subscriber.py  transform_broadcaster.py
opencv-orb/: .gitignore  CMakeLists.txt  DisplayImage.cpp  README  orb_matcher.cpp
opencv-tutorial/: .gitignore  README  aishack-01-colorspaces.py  aishack-02-color-thresholds.py  aishack-03-color-tracking.py  binaryImages.py  find-contours.py  inputAndOutput.py  neuroforge-02-inputAndOutputVideo.py  pocv.py
pan-tilt-unit/pantiltarduino/: pantiltarduino.ino
pan-tilt-unit/serial/: arduino-serial  arduino-serial.c
ros_kinect/: README  mainpage.dox  manifest.xml
voronoi-bot/: Makefile  README
woody/: README  global.h  makefile  notes.txt  woody.c  woody_utils.h
(+155 files in other folders)
