cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( DisplayImage DisplayImage.cpp )
add_executable( matcher_simple matcher_simple.cpp )
add_executable( orb_matcher orb_matcher.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries( matcher_simple ${OpenCV_LIBS} )
target_link_libraries( orb_matcher ${OpenCV_LIBS} )
